<resources>
    <string name="app_name">SnakesLaddersAndIntegers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rocky Games</string>
    <string name="nav_header_subtitle">tebohothg@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_play">Play</string>
    <string name="menu_continue">Continue</string>
    <string name="menu_high_score">High Scores</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="guide1">- Start a new game by clicking \"New Game\" button\n
        - View the top scores by cliking "High Scores" button\n
        - Click \"Register Score\" after finishing game to register your high score\n
        - Press the \"Home Screen\" button during the game to pause it
    </string>
    <string name="play_title">How to play</string>
    <string name="rules">1.Click button labeled \"Click Me!\" to get an arithmetic question\n
                    2. Use the answer to that question to determine the how many times to move on the board.\n
                    3. If the answer is positive, you move forward; if it\'s zero you don\'t move, and if it\'s negative you move backwards\n
                    4. Click the square where your final position should be after moving\n
                    5. The squares are numbered from 1 to 100 in increasing order. You follow them to move around.</string>
    <string name="txt_view_quit">QUIT</string>
    <string name="title_activity_settings">SETTINGS</string>

    <!-- Preference Titles -->
    <string name="mode_header">GAME MODE</string>

    <!-- Mode Preferences -->
    <string name="mode_title">Default game mode</string>

    <string name="title_activity_high_scores">HighScoresActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="txt_view_scores">SCORES</string>
    <string name="txt_view_score">SCORE</string>
    <string name="score_zero">00000</string>
    <string name="text_300">300</string>
    <string name="click">Click Me!</string>
    <string name="expression_0_0">12 + 12 =</string>
    <string name="text_correct_answer_indicator">Symbol indicating whether answer is correct</string>
    <string name="label_register">REGISTER</string>
    <string name="label_cancel">SKIP</string>
    <string name="label_username">Username</string>
    <string name="hint_username">Please your username</string>
    <string name="title_register_username">Register Username</string>

    <string name="label_game_results">GAME RESULTS</string>
    <string name="text_score_100000">100000</string>
    <string name="label_bonus">BONUS</string>
    <string name="text_bonus_5000">5000</string>
    <string name="text_time">TIME</string>
    <string name="text_time_300">300</string>
    <string name="text_total">TOTAL</string>
    <string name="text_total_200000">200000</string>
</resources>
