<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/play_circle_outline_black_24dp"
            android:title="@string/menu_play" />
        <item
            android:id="@+id/nav_resume"
            android:icon="@drawable/ic_play_circle_filled_red_24dp"
            android:title="@string/menu_continue" />
        <item
            android:id="@+id/nav_high_score"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_high_score" />
        <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/menu_help" />
    </group>
</menu>
