<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TotalScoreActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/txtView_stats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="98dp"
        android:text="@string/label_game_results"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_view_scores"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_stats" />

    <TextView
        android:id="@+id/txt_view_scoreAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:text="@string/text_score_100000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_view_scores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_view_scores" />

    <TextView
        android:id="@+id/txtView_bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/label_bonus"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/txt_view_scores"
        app:layout_constraintTop_toBottomOf="@+id/txt_view_scores" />

    <TextView
        android:id="@+id/txtView_bonusAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_bonus_5000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@id/txtView_bonus"
        app:layout_constraintEnd_toEndOf="@+id/txt_view_scoreAmount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_view_scoreAmount"
        tools:layout_editor_absoluteY="145dp" />

    <TextView
        android:id="@+id/txtView_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/text_time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/txtView_bonus"
        app:layout_constraintTop_toBottomOf="@+id/txtView_bonus" />

    <TextView
        android:id="@+id/txtView_timeCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_time_300"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@id/txtView_time"
        app:layout_constraintEnd_toEndOf="@+id/txtView_bonusAmount"
        app:layout_constraintStart_toStartOf="@+id/txtView_bonusAmount" />

    <TextView
        android:id="@+id/txtView_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/text_total"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/txtView_time"
        app:layout_constraintTop_toBottomOf="@+id/txtView_time" />

    <TextView
        android:id="@+id/txtView_totalAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_total_200000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@id/txtView_total"
        app:layout_constraintEnd_toEndOf="@+id/txtView_timeCount"
        app:layout_constraintStart_toStartOf="@+id/txtView_timeCount" />
</androidx.constraintlayout.widget.ConstraintLayout>