<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BoardActivity">

    <TextView
        android:id="@+id/label_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_view_score"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/score_zero"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/label_score"
        app:layout_constraintStart_toEndOf="@+id/label_score" />

    <ImageView
        android:id="@+id/image_answer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/cross"
        android:contentDescription="@string/text_correct_answer_indicator"
        app:layout_constraintBottom_toBottomOf="@+id/view_score"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_scores"
        app:layout_constraintStart_toEndOf="@+id/view_score"
        app:layout_constraintTop_toTopOf="@+id/view_score" />

    <TextView
        android:id="@+id/txt_view_scores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/text_time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_score"
        app:layout_constraintEnd_toStartOf="@+id/textTime"
        app:layout_constraintTop_toTopOf="@+id/view_score"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/text_300"
        android:textAlignment="viewEnd"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_view_scores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_view_scores" />

    <View
        android:id="@+id/img_game_board"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="128dp"
        android:background="@drawable/board"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_answer"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_sigma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_states"
        android:text="@string/click"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_game_board"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/expression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/expression_0_0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@id/button_sigma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toEndOf="@+id/button_sigma" />
</androidx.constraintlayout.widget.ConstraintLayout>